--- a/Posetrix/Views/SettingsView.xaml
+++ b/Posetrix/Views/SettingsView.xaml
@@ -8,11 +8,10 @@
     xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     Title="{Binding WindowTitle}"
     Width="480"
-    Height="400"
-    MinWidth="480"
-    MinHeight="400"
+    Height="320"
     d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel}"
     Icon="{StaticResource AppIcon}"
+    ResizeMode="NoResize"
     mc:Ignorable="d">
     <Grid Margin="12" ShowGridLines="False">
         <Grid.RowDefinitions>
@@ -22,15 +21,10 @@
             <RowDefinition Height="12" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="12" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="Transparent">
-            <Border
-                Padding="{StaticResource ExpanderPadding}"
-                Background="{DynamicResource ExpanderHeaderBackground}"
-                BorderBrush="{DynamicResource ExpanderHeaderBorderBrush}"
-                BorderThickness="{StaticResource ExpanderBorderThemeThickness}"
-                CornerRadius="{DynamicResource ControlCornerRadius}">
+            <Border Style="{StaticResource ContentPanel}">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
@@ -52,12 +46,7 @@
             </Border>
         </Grid>
         <Grid Grid.Row="2">
-            <Border
-                Padding="{StaticResource ExpanderPadding}"
-                Background="{DynamicResource ExpanderHeaderBackground}"
-                BorderBrush="{DynamicResource ExpanderHeaderBorderBrush}"
-                BorderThickness="{StaticResource ExpanderBorderThemeThickness}"
-                CornerRadius="{DynamicResource ControlCornerRadius}">
+            <Border Style="{StaticResource ContentPanel}">
                 <Grid ShowGridLines="False">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
@@ -88,12 +77,7 @@
             </Border>
         </Grid>
         <Grid Grid.Row="4">
-            <Border
-                Padding="{StaticResource ExpanderPadding}"
-                Background="{DynamicResource ExpanderHeaderBackground}"
-                BorderBrush="{DynamicResource ExpanderHeaderBorderBrush}"
-                BorderThickness="{StaticResource ExpanderBorderThemeThickness}"
-                CornerRadius="{DynamicResource ControlCornerRadius}">
+            <Border Style="{StaticResource ContentPanel}">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
@@ -130,20 +114,11 @@
                 </Grid>
             </Border>
         </Grid>
-        <StackPanel Grid.Row="6" VerticalAlignment="Center">
-            <TextBlock
-                HorizontalAlignment="Center"
-                Style="{StaticResource BodyTextBlockStyle}"
-                Text="Posetrix" />
-
-            <TextBlock
-                HorizontalAlignment="Center"
-                Style="{StaticResource BodyTextBlockStyle}"
-                Text="Application version" />
-            <Image Width="30" Source="/Assets/Icons/github-mark.png" />
-            <TextBlock HorizontalAlignment="Center">
-                Source:<Hyperlink NavigateUri="http://www.example.com" RequestNavigate="Hyperlink_RequestNavigate">www.example.com</Hyperlink>
-            </TextBlock>
-        </StackPanel>
+        <TextBlock
+            Grid.Row="6"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Style="{StaticResource BodyTextBlockStyle}"
+            Text="Source code: https://github.com/zhemchugoff/Posetrix" />
     </Grid>
 </Window>
