--- a/Posetrix/Resources/Styles.xaml
+++ b/Posetrix/Resources/Styles.xaml
@@ -121,7 +121,8 @@
     <!--  Border with buttons in session window.  -->
     <Style x:Key="SessionBorderWithButtons" TargetType="Border">
         <Setter Property="Padding" Value="8" />
-        <Setter Property="Background" Value="{DynamicResource SolidBackgroundFillColorBaseBrush}" />
+        <!--<Setter Property="Background" Value="{DynamicResource SolidBackgroundFillColorBaseBrush}" />-->
+        <Setter Property="Background" Value="Transparent" />
         <Setter Property="CornerRadius" Value="{DynamicResource ControlCornerRadius}" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Bottom" />
