--- a/Posetrix/Views/FoldersAddView.xaml
+++ b/Posetrix/Views/FoldersAddView.xaml
@@ -13,6 +13,7 @@
     MinHeight="400"
     d:DataContext="{d:DesignInstance Type=viewmodels:FolderAddViewModel}"
     Icon="{StaticResource AppIcon}"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid Margin="12">
         <Grid.RowDefinitions>
