--- a/Posetrix/Views/MainView.xaml
+++ b/Posetrix/Views/MainView.xaml
@@ -14,6 +14,7 @@
     d:DataContext="{d:DesignInstance Type=core:MainViewModel}"
     Icon="{StaticResource AppIcon}"
     ResizeMode="CanMinimize"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid Margin="12">
         <Grid.RowDefinitions>
