--- a/Posetrix/Views/MainView.xaml
+++ b/Posetrix/Views/MainView.xaml
@@ -8,9 +8,7 @@
     xmlns:views="clr-namespace:Posetrix.Views"
     Title="{Binding WindowTitle}"
     Width="400"
-    Height="636"
-    MinWidth="400"
-    MinHeight="636"
+    Height="630"
     d:DataContext="{d:DesignInstance Type=core:MainViewModel}"
     Icon="{StaticResource AppIcon}"
     ResizeMode="CanMinimize"
@@ -53,7 +51,6 @@
                         Command="{Binding OpenSettingsCommand}"
                         Content="&#xE713;"
                         Style="{StaticResource SettingsButton}">
-
                         <Button.ToolTip>
                             <ToolTip>
                                 <TextBlock Style="{StaticResource InfoToolTip}" Text="Settings" />
@@ -68,7 +65,6 @@
                         Style="{StaticResource SubtitleTextBlockStyle}"
                         Text="Add your reference images" />
                 </Grid>
-
                 <Button
                     Name="AddReferencesButton"
                     Grid.Row="1"
@@ -106,9 +102,9 @@
                     Margin="0,12"
                     DisplayMemberPath="DisplayName"
                     ItemsSource="{Binding DynamicViews}"
-                    SelectedItem="{Binding SelectedViewModel}"/>
+                    SelectedItem="{Binding SelectedViewModel}" />
                 <Grid Grid.Row="2">
-                    <ContentControl Content="{Binding SelectedViewModel}"/>
+                    <ContentControl Content="{Binding SelectedViewModel}" />
                 </Grid>
             </Grid>
         </Border>
@@ -116,28 +112,16 @@
         <!--  Image count section  -->
         <Border Grid.Row="4" Style="{StaticResource ContentPanel}">
             <UniformGrid VerticalAlignment="Center" Columns="2">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock VerticalAlignment="Center" Text="Images to draw" />
-                    <TextBlock
-                        Margin="8,4,0,0"
-                        VerticalAlignment="Center"
-                        FontFamily="{StaticResource SegoeUiIcons}"
-                        Text="&#xE946;">
-                        <TextBlock.ToolTip>
-                            <ToolTip>
-                                <TextBlock Style="{StaticResource InfoToolTip}"
-                                    Text="0: Entire collection" />
-                            </ToolTip>
-                        </TextBlock.ToolTip>
-                    </TextBlock>
-                </StackPanel>
+                <TextBlock VerticalAlignment="Center" Text="Images to draw" />
                 <TextBox
                     x:Name="ImageCount"
                     Height="30"
                     HorizontalAlignment="Stretch"
                     PreviewTextInput="ImageCount_PreviewTextInput"
-                    Style="{StaticResource TextBoxValidation}"
-                    Text="{Binding SessionImageCount, FallbackValue=0, TargetNullValue=''}" />
+                    Text="{Binding SessionImageCount, FallbackValue=0, TargetNullValue=''}"
+                    ToolTipService.InitialShowDelay="100"
+                    ToolTipService.Placement="MousePoint"
+                    ToolTipService.ToolTip="0: Entire collection" />
             </UniformGrid>
         </Border>
 
@@ -167,8 +151,7 @@
                         Text="&#xE946;">
                         <TextBlock.ToolTip>
                             <ToolTip>
-                                <TextBlock Style="{StaticResource InfoToolTip}"
-                                    Text="A session will start over when the last image is done" />
+                                <TextBlock Style="{StaticResource InfoToolTip}" Text="A session will start over when the last image is done" />
                             </ToolTip>
                         </TextBlock.ToolTip>
                     </TextBlock>
