--- a/Posetrix/Views/FoldersAddView.xaml
+++ b/Posetrix/Views/FoldersAddView.xaml
@@ -12,7 +12,7 @@
     MinWidth="600"
     MinHeight="400"
     d:DataContext="{d:DesignInstance Type=viewmodels:FolderAddViewModel}"
-    Icon="{StaticResource AppIcon}"
+    Icon="pack://application:,,,/Assets/Icons/favicon.ico"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid Margin="12">
