--- a/Posetrix/Views/SessionView.xaml
+++ b/Posetrix/Views/SessionView.xaml
@@ -11,7 +11,7 @@
     MinWidth="400"
     MinHeight="400"
     d:DataContext="{d:DesignInstance viewmodels:SessionViewModel}"
-    Icon="{StaticResource AppIcon}"
+    Icon="pack://application:,,,/Assets/Icons/favicon.ico"
     Topmost="{Binding IsAlwaysOnTopOn}"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
