--- a/Posetrix/Views/SettingsView.xaml
+++ b/Posetrix/Views/SettingsView.xaml
@@ -10,7 +10,7 @@
     Width="480"
     Height="340"
     d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel}"
-    Icon="{StaticResource AppIcon}"
+    Icon="pack://application:,,,/Assets/Icons/favicon.ico"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
