--- a/Posetrix/Resources/Styles.xaml
+++ b/Posetrix/Resources/Styles.xaml
@@ -3,11 +3,9 @@
         x:Key="SettingsButton"
         BasedOn="{StaticResource {x:Type Button}}"
         TargetType="Button">
-        <Setter Property="Width" Value="28" />
-        <Setter Property="Height" Value="28" />
-        <Setter Property="Padding" Value="0" />
+        <Setter Property="Padding" Value="4" />
         <Setter Property="FontFamily" Value="{DynamicResource SegoeUiIcons}" />
-        <Setter Property="FontSize" Value="16" />
+        <Setter Property="FontSize" Value="20" />
     </Style>
     <!--  Session window.  -->
     <!--  Control buttons.  -->
@@ -43,7 +41,6 @@
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="FontFamily" Value="{DynamicResource SegoeUiIcons}" />
         <Setter Property="FontSize" Value="16" />
-        <Setter Property="Margin" Value="4,0" />
         <Setter Property="Padding" Value="0" />
     </Style>
     <Style
@@ -85,7 +82,7 @@
     </Style>
     <!--  Panels with content.  -->
     <Style x:Key="ContentPanel" TargetType="Border">
-        <Setter Property="Padding" Value="12" />
+        <Setter Property="Padding" Value="16" />
         <Setter Property="Background" Value="{DynamicResource ExpanderHeaderBackground}" />
         <Setter Property="BorderBrush" Value="{DynamicResource ExpanderHeaderBorderBrush}" />
         <Setter Property="BorderThickness" Value="{DynamicResource ExpanderBorderThemeThickness}" />
@@ -96,12 +93,11 @@
         x:Key="FoldersAddRemoveButton"
         BasedOn="{StaticResource {x:Type Button}}"
         TargetType="Button">
-        <Setter Property="Width" Value="40" />
         <Setter Property="Height" Value="40" />
-        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="FontFamily" Value="{DynamicResource SegoeUiIcons}" />
-        <Setter Property="FontSize" Value="20" />
+        <Setter Property="FontSize" Value="24" />
         <Setter Property="Padding" Value="0" />
     </Style>
     <!--  Textbox tooltips for buttons with SegoeUI icons font.  -->
@@ -109,19 +105,18 @@
         x:Key="InfoToolTip"
         BasedOn="{StaticResource {x:Type TextBlock}}"
         TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="{DynamicResource SegoeUi}" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="FontSize" Value="12" />
     </Style>
     <!--  Image info.  -->
     <Style x:Key="ImageInfo" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="{DynamicResource SegoeUi}" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="FontSize" Value="12" />
         <Setter Property="Foreground" Value="{DynamicResource TextFillColorSecondaryBrush}" />
     </Style>
     <!--  Border with buttons in session window.  -->
     <Style x:Key="SessionBorderWithButtons" TargetType="Border">
         <Setter Property="Padding" Value="8" />
-        <!--<Setter Property="Background" Value="{DynamicResource SolidBackgroundFillColorBaseBrush}" />-->
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="CornerRadius" Value="{DynamicResource ControlCornerRadius}" />
         <Setter Property="HorizontalAlignment" Value="Center" />
@@ -129,7 +124,7 @@
     </Style>
     <!--  Session statistics texbox.  -->
     <Style x:Key="SessionStatistics" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="{DynamicResource SegoeUi}" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="FontSize" Value="20" />
     </Style>
 </ResourceDictionary>
