--- a/Posetrix/Views/SessionView.xaml
+++ b/Posetrix/Views/SessionView.xaml
@@ -28,12 +28,12 @@
         <KeyBinding Key="E" Command="{Binding ToggleMirrorYCommand}" />
         <KeyBinding Key="G" Command="{Binding ToggleGreyScaleCommand}" />
     </Window.InputBindings>
-    <Grid Margin="12">
+    <Grid Margin="24">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Margin="0,0,0,8">
+        <StackPanel Grid.Row="0">
             <Border
                 Grid.Row="0"
                 Padding="8"
@@ -45,7 +45,6 @@
                     <TextBlock
                         VerticalAlignment="Center"
                         d:Text="2 / 4 / 121"
-                        FontSize="12"
                         Style="{StaticResource CaptionTextBlockStyle}"
                         Text="{Binding SessionInfo}"
                         ToolTipService.InitialShowDelay="100"
@@ -56,6 +55,7 @@
                         VerticalAlignment="Center"
                         Orientation="Horizontal">
                         <ToggleButton
+                            Margin="0,0,8,0"
                             Command="{Binding ToggleMirrorXCommand}"
                             Content="&#xE784;"
                             IsChecked="{Binding IsMirroredX, Mode=OneWay}"
@@ -69,6 +69,7 @@
                             </ToggleButton.ToolTip>
                         </ToggleButton>
                         <ToggleButton
+                            Margin="0,0,8,0"
                             Command="{Binding ToggleMirrorYCommand}"
                             Content="&#xe76f;"
                             IsChecked="{Binding IsMirroredY, Mode=OneWay}"
@@ -82,6 +83,7 @@
                             </ToggleButton.ToolTip>
                         </ToggleButton>
                         <ToggleButton
+                            Margin="0,0,8,0"
                             Command="{Binding ToggleGreyScaleCommand}"
                             Content="&#xE793;"
                             IsChecked="{Binding IsGreyScaleOn, Mode=OneWay}"
@@ -95,6 +97,7 @@
                             </ToggleButton.ToolTip>
                         </ToggleButton>
                         <ToggleButton
+                            Margin="0,0,8,0"
                             Content="&#xe718;"
                             IsChecked="{Binding IsAlwaysOnTopOn}"
                             Style="{StaticResource EditToggleButton}">
@@ -125,6 +128,7 @@
                 </UniformGrid>
             </Border>
             <ProgressBar
+                Margin="0,4"
                 Maximum="{Binding SessionCollectionCount, Mode=OneWay}"
                 Minimum="1"
                 Value="{Binding CurrentImageIndex, Mode=OneWay}" />
